# transformer-from-scratch-en-fr

./: .gitignore  main.py  pkglist.txt  pyproject.toml  test1.py
artifacts/vocab/: src_vocab.json  tgt_vocab.json
config/: config.yaml
notebooks/: transformer-mt.ipynb
src/: exception.py  logger.py
src/components/: data_ingestion.py  data_preprocessing.py  model.py  model_evaluation.py  model_trainer.py
src/utils/: common.py
