[project]
name = "transformer-mt"
version = "0.1.0"
description = "English → French Neural Machine Translation — Transformer from scratch (PyTorch)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fr-core-news-sm>=3.8.0",
    "numpy>=2.2.6",
    "pip>=26.0.1",
    "ptpython>=3.0.32",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sacrebleu>=2.6.0",
    "spacy>=3.8.13",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "rich>=14.3.3",
    "ruff>=0.15.8",
]
tracking = [
    "wandb>=0.25.1",
]

[build-system] #How your project is built
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] #What to include in package
packages = ["src"]
